--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -14,7 +14,7 @@
         <p class="subtitle">Proteja seu patrimônio e planeje o futuro com uma holding estruturada pela W1.</p>
         <div class="buttons">
             <a href="{% url 'signup' %}" class="btn">Crie sua Conta</a>
-            <button onclick="comparePrices()">Acessar Painel</button>
+            <a href="{% url 'login' %}" class="btn">Acessar Painel</a>
         </div>
     </div>
 </section>
