--- a/core/templates/management/management_list_holdings.html
+++ b/core/templates/management/management_list_holdings.html
@@ -71,9 +71,18 @@
                                         {% endif %}
                                     </td>
                                     <td class="action-links">
-                                        <a href="{% url 'management_holding_detail' holding.id %}" class="btn btn-details btn-sm" title="Ver Detalhes e Gerenciar Holding">
-                                            <i class="fas fa-eye"></i> Detalhes
-                                        </a>
+                                        {% comment %} Botão "Detalhes" na lista de holdings {% endcomment %}
+                                        {% if holding.clientes.all %}
+                                            {% with first_client=holding.clientes.first %}
+                                                <a href="{% url 'management_user_detail' first_client.id %}" class="btn btn-details btn-sm" title="Ver Detalhes do Cliente Principal: {{ first_client.get_full_name|default:first_client.email }}">
+                                                    <i class="fas fa-user"></i> Detalhes Cliente
+                                                </a>
+                                            {% endwith %}
+                                        {% else %}
+                                            <a href="{% url 'management_holding_detail' holding.id %}" class="btn btn-details btn-sm" title="Ver Detalhes da Holding (sem clientes associados)">
+                                                <i class="fas fa-eye"></i> Detalhes Holding
+                                            </a>
+                                        {% endif %}
                                         {% if request.user.is_superuser %}
                                             <a href="{% url 'management_manage_holding_details_and_consultants' holding.id %}" class="btn btn-edit btn-sm" title="Editar Dados Básicos/Consultores">
                                                 <i class="fas fa-edit"></i> Editar
